terraform-aws/security_group.tf
resource "aws_security_group" "avanti-bootcamp" {
  name        = "avanti-bootcamp-sg"
  description = "Security group for Avanti Bootcamp"
  # vpc_id      = aws_vpc.default.id

  # INBOUND RULES
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # OUTBOUND RULES

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "avanti-bootcamp-sg"
  }
}
